# solana-accountsdb-connector

./: Aptfile  Cargo.toml  Procfile  README.md  config.json
.github/workflows/: release.yml  test.yml
accountsdb-plugin-grpc/: Cargo.toml  example-config.json
accountsdb-plugin-grpc/src/: accountsdb_plugin_grpc.rs  lib.rs  test_server.rs
ci/: cargo-install-all.sh  env.sh  rust-version.sh
connector-lib/: Cargo.toml  build.rs
connector-lib/src/: grpc_plugin_source.rs  main.rs  mango.rs  postgres_target.rs  websocket_source.rs
connector-mango/: Cargo.toml  config.json  example-config.toml
connector-mango/scripts/: create_schema.sql  create_views.sql  drop_schema.sql  drop_views.sql  pnl.sql
connector-mango/src/: main.rs  mango.rs
connector-raw/: Cargo.toml  config.json  example-config.toml
connector-raw/scripts/: create_schema.sql  create_views.sql  drop_schema.sql  drop_views.sql
connector-raw/src/: main.rs
geyser-plugin-grpc/: Cargo.toml  build.rs
geyser-plugin-grpc/src/: accounts_selector.rs  compression.rs  geyser_plugin_grpc.rs  lib.rs  prom.rs  test_server.rs
heroku/: run.sh
lib/: Cargo.toml
lib/src/: chain_data.rs  grpc_plugin_source.rs  lib.rs  memory_target.rs  metrics.rs  postgres_target.rs  postgres_types_numeric.rs  websocket_source.rs
mango-pnl-service/: Cargo.toml  example-config.toml
mango-pnl-service/src/: main.rs
proto/: accountsdb.proto  geyser.proto
scripts/: create_schema.sql  create_views.sql  drop_schema.sql  drop_views.sql
