[workspace]
members = [
        "geyser-plugin-grpc",
        "lib",
        "connector-raw",
        "connector-mango",
        "mango-pnl-service",
]


[patch.crates-io]
# for gzip encoded responses
jsonrpc-core-client = { git = "https://github.com/ckamm/jsonrpc.git", branch = "ckamm/http-with-gzip" }

