[package]
name = "solana-accountsdb-connector-plugin-grpc"
version = "0.1.0"
authors = ["Christian Kamm <ckamm@delightful-solutions.de>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "test-server"
path = "src/test_server.rs"

[dependencies]
bs58 = "0.4.0"
chrono = { version = "0.4.11", features = ["serde"] }
crossbeam-channel = "0.5"
log = "0.4.14"
serde = "1.0.130"
serde_derive = "1.0.103"
serde_json = "1.0.67"

solana-accountsdb-plugin-interface = "=1.8.2"
solana-logger = "=1.8.2"
solana-metrics = "=1.8.2"
solana-sdk = "=1.8.2"

thiserror = "1.0.21"

tonic = "0.6"
prost = "0.9"
futures-core = "0.3"
futures-util = "0.3"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1"

async-stream = "0.2"
rand = "0.7"

[build-dependencies]
tonic-build = "0.6"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

