[package]
name = "solana-accountsdb-connector-plugin-grpc"
version = "0.1.0"
authors = ["Christian Kamm <mail@ckamm.de>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "test-server"
path = "src/test_server.rs"

[dependencies]
bs58 = "0.4.0"
log = "0.4.14"
serde = "1.0.130"
serde_derive = "1.0.103"
serde_json = "1.0.67"

solana-accountsdb-plugin-interface = "=1.8.14"
solana-logger = "=1.8.14"
solana-metrics = "=1.8.14"
solana-sdk = "=1.8.14"

tonic = "0.6"
prost = "0.9"
futures-core = "0.3"
futures-util = "0.3"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1"

async-stream = "0.2"
rand = "0.8"

[build-dependencies]
tonic-build = "0.6"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

