[package]
name = "solana-accountsdb-connector-lib"
version = "0.1.0"
authors = ["Christian Kamm <ckamm@delightful-solutions.de>"]
edition = "2018"

[dependencies]
jsonrpc-core = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-http-server = "18.0.0"
jsonrpc-core-client = { version = "18.0.0", features = ["ws", "http"] }

solana-rpc = "=1.8.2"
solana-client = "=1.8.2"
solana-account-decoder = "1.8.2"
solana-sdk = "=1.8.2"
solana-logger = "=1.8.2"

hyper = { version = "0.14", features = ["client", "http1"] }
hyper-tls = { version = "0.5" }
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7.4"
tokio-stream = "0.1"
postgres-types = { version = "0.2", features = ["array-impls", "derive"] }

# postgres_query hasn't updated its crate in a while
postgres_query = { git = "https://github.com/nolanderc/rust-postgres-query", rev = "b4422051c8a31fbba4a35f88004c1cefb1878dd5" }

serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.68"

tonic = "0.6"
fixed = { version = "=1.9.0", features = ["serde"] }
bs58 = "0.3.1"
futures = "0.3.17"
log = "0.4"
prost = "0.9"
futures-core = "0.3"
futures-util = "0.3"
rand = "0.7"
anyhow = "1.0"
async-stream = "0.2"
async-channel = "1.6"
async-trait = "0.1"
bytes = "1.0"

# The v3.2 branch currently has a conflicting syn version dependency, use a fixed version
mango = { git = "https://github.com/ckamm/mango-v3", rev = "2e1e4886544bdb1c5f773a3856305210f622fa94" }
mango-common = { git = "https://github.com/ckamm/mango-v3", rev = "2e1e4886544bdb1c5f773a3856305210f622fa94" }

[build-dependencies]
tonic-build = "0.6"

