[package]
name = "solana-geyser-connector-mango"
version = "0.1.0"
authors = ["Christian Kamm <mail@ckamm.de>"]
edition = "2018"

[dependencies]
solana-geyser-connector-lib = { path = "../lib" }
solana-logger = "=1.10.38"
log = "0.4"
anyhow = "1.0"
toml = "0.5"

async-trait = "0.1"
fixed = { version = ">=1.11.0, <1.12.0", features = ["serde"] }
bs58 = "0.3.1"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7.4"
postgres-types = { version = "0.2", features = ["array-impls", "derive"] }
postgres_query = { git = "https://github.com/nolanderc/rust-postgres-query", rev = "b4422051c8a31fbba4a35f88004c1cefb1878dd5" }

mango = { git = "https://github.com/blockworks-foundation/mango-v3", branch = "main" }
mango-common = { git = "https://github.com/blockworks-foundation/mango-v3", branch = "main" }
