[package]
name = "solana-accountsdb-connector-raw"
version = "0.1.0"
authors = ["Christian Kamm <mail@ckamm.de>"]
edition = "2018"

[dependencies]
solana-accountsdb-connector-lib = { path = "../lib" }
solana-logger = "=1.8.11"
log = "0.4"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
toml = "0.5"
