[package]
name = "solana-geyser-connector-plugin-grpc"
version = "0.1.0"
authors = ["Christian Kamm <mail@ckamm.de>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "transaction-forwardoor"
path = "src/transaction_forwarder.rs"

[dependencies]
bs58 = "0.4.0"
log = "0.4.14"
serde = "1.0.130"
serde_derive = "1.0.103"
serde_json = "1.0.67"

solana-geyser-plugin-interface = "=1.9.13"
solana-logger = "=1.9.13"
solana-metrics = "=1.9.13"
solana-sdk = "=1.9.13"

tonic = "0.6"
prost = "0.9"
futures-core = "0.3"
futures-util = "0.3"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1"

async-stream = "0.2"
rand = "0.8"

nats = "0.18"
smol = "1.2.5"

[build-dependencies]
tonic-build = "0.6"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

