
[package]
name = "solana-geyser-connector-plugin-grpc"
version = "0.1.0"
authors = ["Christian Kamm <mail@ckamm.de>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "test-server"
path = "src/test_server.rs"

[dependencies]
anyhow = "1"
async-stream = "0.2"
bs58 = "0.4.0"
futures-core = "0.3"
futures-util = "0.3"
hyper = { version = "0.14.20", features = ["server", "http1", "tcp"] }
lazy_static = "1.4.0"
log = "0.4.14"
prometheus = "0.13.2"
prost = "0.9"
rand = "0.8"
serde = "1.0.130"
serde_derive = "1.0.103"
serde_json = "1.0.67"
solana-geyser-plugin-interface = "=1.10.40"
solana-logger = "=1.10.40"
solana-metrics = "=1.10.40"
solana-sdk = "=1.10.40"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1"
tonic = { version = "0.6", features = ["compression"] }
zstd = "0.11.2"
zstd-safe = "5.0.2"

[build-dependencies]
anyhow = "1"
cargo-lock = "8"
git-version = "0.3"
tonic-build = { version = "0.6", features = ["compression"] }
vergen = "=7.2.1"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

