[package]
name = "solana-accountsdb-connector-lib"
version = "0.1.0"
authors = ["Christian Kamm <ckamm@delightful-solutions.de>"]
edition = "2018"

[lib]


[dependencies]
jsonrpc-core = "18.0.0"
jsonrpc-core-client = { version = "18.0.0", features = ["ws", "http"] }

solana-rpc = "=1.8.2"
solana-client = "=1.8.2"
solana-account-decoder = "1.8.2"
solana-sdk = "=1.8.2"

tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-postgres = "0.7"
postgres-types = { version = "0.2", features = ["array-impls", "derive"] }
postgres-native-tls = "0.5"
native-tls = "0.2"

# postgres_query hasn't updated its crate in a while
postgres_query = { git = "https://github.com/nolanderc/rust-postgres-query", rev = "b4422051c8a31fbba4a35f88004c1cefb1878dd5" }

serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.68"

tonic = { version = "0.6", features = ["tls"] }
prost = "0.9"

bs58 = "0.3.1"
log = "0.4"
rand = "0.7"
anyhow = "1.0"
fixed = { version = "=1.9.0", features = ["serde"] }
bytes = "1.0"

futures = "0.3.17"
futures-core = "0.3"
futures-util = "0.3"

async-stream = "0.2"
async-channel = "1.6"
async-trait = "0.1"

[build-dependencies]
tonic-build = "0.6"

