[package]
name = "mango-pnl-service"
version = "0.1.0"
authors = ["Christian Kamm <mail@ckamm.de>"]
edition = "2021"

[dependencies]
solana-geyser-connector-lib = { path = "../lib" }
solana-logger = "=1.9.13"
solana-sdk = "=1.9.13"
log = "0.4"
anyhow = "1.0"
toml = "0.5"
bytemuck = "1.7.2"
jsonrpsee = { version = "0.9.0", features = ["http-server"] }

async-trait = "0.1"
fixed = { version = "1.9.0", features = ["serde"] }
bs58 = "0.3.1"
tokio = { version = "1", features = ["full"] }

serde = "1.0.130"
serde_derive = "1.0.130"

mango = { git = "https://github.com/blockworks-foundation/mango-v3", branch = "main" }
mango-common = { git = "https://github.com/blockworks-foundation/mango-v3", branch = "main" }
